--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Horizo Marketing</title>
+    <link rel="icon" type="image/x-icon" href="assets/img/favicon.png">
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
     <!-- TAILWINDS -->
